[project]
authors = [{ name = "Tiffany Le", email = "tiffanynle.cs@gmail.com" }]
dependencies = []
description = "A template for PyTorch projects"
name = "torch-template"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
torch_template = { path = ".", editable = true }

[tool.pixi.tasks]
test = "pytest"
lint = "ruff check --fix"
fmt = "ruff format"
style = { depends-on = ["fmt", "lint"] }

[tool.pixi.dependencies]
python = "3.11.*"
torchvision = ">=0.20.1,<0.21"
wandb = ">=0.19.8,<0.20"
hydra-core = ">=1.3.2,<2"

[tool.pixi.feature.cuda.system-requirements]
cuda = "12"

[tool.pixi.feature.cuda.dependencies]
cuda-version = "12.6.*"
pytorch-gpu = "*"

[tool.pixi.feature.cpu.dependencies]
pytorch-cpu = "*"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
ruff = "*"

[tool.pixi.environments]
cpu = ["cpu"]
cuda = ["cuda"]
dev = ["cuda", "test"]
default = ["cpu"]

[tool.ruff.lint]
select = ["D"]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"
